# PiCode

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cpicode_example.c  picode_example.cpp
.github/workflows/: BuildTest.yml
libs/pilight/libs/pilight/core/: common.c  common.h  dso.h  gc.h  json.c  log.h  mem.h  options.c  options.h  pilight.h
libs/pilight/libs/pilight/protocols/: protocol.c  protocol.h  protocol_header.h  protocol_init.h
libs/pilight/libs/pilight/protocols/433.92/: alecto_ws1700.h  alecto_wsd17.h  alecto_wx500.h  arctech_contact.h  arctech_dimmer.h  arctech_dusk.h  arctech_motion.h  arctech_screen.h  arctech_screen_old.h  arctech_switch.h  arctech_switch_old.h  auriol.h  beamish_switch.h  clarus.h  cleverwatts.h  conrad_rsl_contact.h  conrad_rsl_switch.h  daycom.h  ehome.h  elro_300_switch.h  elro_400_switch.h  elro_800_contact.h  elro_800_switch.h  eurodomest_switch.h  ev1527.h  fanju.h  heitech.h  impuls.h  iwds07.h  kerui_d026.h  livolo_switch.c  livolo_switch.h  logilink_switch.h  mumbi.h  nexus.h  ninjablocks_weather.c  ninjablocks_weather.h  pollin.h  quigg_gt1000.c  quigg_gt1000.h  (+26 more)
src/: PiCode.cpp  PiCode.h  cPiCode.c  cPiCode.h
